--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 #Hibernate ddl auto (create ,create-drop,validate, update)
 # we are going to update existing table so given update
 spring.jpa.hibernate..ddl-auto = update
+spring.jpa.show-sql=true
+
+#adding debug log
+logging.level.org.springframework.security=DEBUG
+
+#set security username and password
+#spring.security.user.name=ali
+#spring.security.user.password=password
+#spring.security.user.roles=ADMIN
